# python-intan

./: .gitignore  0_build_dataset.py  1_preprocess_data.py  2_feature_extraction.py  3_train_model.py  4_realtime_decode.py  CHANGELOG.md  CITATION.cff  CONFIG.txt  CONTRIBUTING.md  LICENSE  README.md  config.txt  genindex.html  index.html  intan.py  load_rhd_demo.py  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  serial_test.py  split_csv.py
.github/workflows/: gh-pages.yml
3D_printed_arm_control/: README.md  gesture_test.py
RHD2164_wireless/: code.py  pc_server_test.py  pico_W_pchotspot_test.py
_modules/: index.html
_sources/: index.rst.txt
_sources/examples/: index.rst.txt  (+8 more)
analysis/: example_sci_gesture.py
examples/: emg_viewer_gui.py  file_loading.html  gesture_classification.html  gui_applications.html  hardware_control.html  index.html  introduction.html  live_plotting.html  loading_data.html  lsl_streaming.html  parse_rhd_data.py  realtime_predict.html  stream_client_demo.py  stream_vs_file.html
gesture_classifier/: README.md  feature_extraction.py  old_train_model.py  preprocess_data.py  train_model.py
info/: advanced.html  applications.html  faqs.html  index.html  installation.html  load_files.html  plotting.html  rhx_device.html  signal_processing.html
intan/: __init__.py
intan_api/: intan.applications.html  intan.decomposition.html  intan.html  intan.interface.html  intan.io.html  intan.ml.html  intan.plotting.html  intan.processing.html  intan.rhx_interface.html  intan.samples.html  modules.html
pico/: code.py  main.py  serial_test.py
realtime_decoder/: README.md  realtime_decode.py
temp/: OLDREADME.md  load_dat_demo.py  load_rhd_demo.py  split_csv.py
tests/: pico_servo_sweep.py  test_RHD2164_SPI.py  test_denoise.py
tutorials/: advanced.html  installation.html  load_files.html  plotting.html  rhx_device.html
utilities/: emg_processing.py  messaging_utilities.py  ml_utilities.py  models.py  plotting_utilities.py  rhd_utilities.py
(+170 files in other folders)
